@@ -1,9 +1,16 @@
+2001-11-23 Stefan Petersen (spe@stacken.kth.se)
+
+	* src/gerb_image.h, src/draw.c, src/gerber.c, src/scm_gerber.c:
+	  Are now able to parse and display polyogon area fill codes.
+
+	
 2001-11-21 Andreas Andersson (e92_aan@e.kth.se)
 
 	* src/drill.c:
 	  The format guessing code now guesses right for
 	  one more format.
 	  More M codes recognized (and later ignored).
+
 	
 2001-11-20 Stefan Petersen (spe@stacken.kth.se)
 
